OO-3288, OO-3297, OO-3291: add model for organisations and curriculums, add curriculum manager global role